--- a/index.html
+++ b/index.html
@@ -6,50 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
-    <title>Posicionamento</title>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <title>Otávio Lube dos Santos</title>
 </head>
 
 <body>
-
     <header>
-        <img id="hero" src="imgs/otavio.jpg" alt="Minha imagem">
-        <h1 id="title">Otávio Lube dos Santos</h1>
+        <img id="hero" src="imgs/otavio.jpg" alt="Foto de Otávio">
+        <h1 id="hero">Otávio Lube dos Santos</h1>
     </header>
 
     <nav>
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">PORTFÓLIO</a></li>
+            <li><a href="#">SERVIÇOS</a></li>
             <li><a href="#">CONTATO</a></li>
-            <li><a href="#">BLOG</a></li>
         </ul>
     </nav>
 
-    <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus officiis veritatis aliquid beatae dolorum maxime
-        hic nisi odio doloremque, laborum delectus fuga saepe ab facere. Fugiat commodi nam vel consequuntur!
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, distinctio consequatur iste neque illo
-            nulla, harum voluptates illum optio voluptatem reiciendis, labore totam aliquid! Molestias harum dicta
-            aliquid non iure.
-        </p>
-
-        <h3>Video</h3>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Hy2Evmyuspk" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-
-    </main>
-
-    <footer>
-        <h6>Developed by @otaviolube</h6>
-    </footer>
 
 </body>
 
